# shop_savannah

./: .gitignore  manage.py  pyproject.toml
shopping/: admin.py  auth.py  models.py  schemas.py  send_sms.py  serializers.py  tasks.py  tests.py  urls.py  views.py
shopping/migrations/: 0001_initial.py  0002_category_price_category_quantity_and_more.py  0003_customer_groups_customer_is_active_customer_is_staff_and_more.py  0004_alter_customer_phone_number.py  0005_remove_category_quantities_positive_int_and_more.py  0006_remove_order_amount_as_positive_and_more.py  0007_remove_customer_amount_as_positive.py
shops_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
