[tool.poetry]
name = "shops-project"
version = "0.1.0"
description = "A simple shop"
authors = ["Derrick_Munyiri <dmunyiri12@gmail.com>"]
# readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
djangorestframework = "^3.16.1"
psycopg = { extras = ["binary"], version = "^3.1.12" }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
