[tool.poetry]
name = "shops-project"
version = "0.1.0"
description = "A simple shop"
authors = ["Derrick_Munyiri <dmunyiri12@gmail.com>"]
# readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
djangorestframework = "^3.16.1"
psycopg = { extras = ["binary"], version = "^3.1.12" }
pydantic = "^2.11.9"
python-decouple = "^3.8"
django-phonenumber-field = "^8.1.0"
phonenumbers = "^9.0.14"
mozilla-django-oidc = "^4.0.1"
celery = "^5.5.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
